images/bootstrap/overlay/etc/microshift/manifests.d/system-dashboard/manifests/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: system-dashboard
  labels:
    app.kubernetes.io/part-of: system-dashboard
