images/bootstrap/overlay/etc/microshift/manifests.d/system-dashboard/manifests/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blackbox-exporter
  labels:
    app.kubernetes.io/component: blackbox-exporter
    app.kubernetes.io/part-of: system-dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: blackbox-exporter
  template:
    metadata:
      labels:
        app.kubernetes.io/name: blackbox-exporter
        app.kubernetes.io/component: blackbox-exporter
        app.kubernetes.io/part-of: system-dashboard
    spec:
      containers:
      - name: blackbox-exporter
        image: prom/blackbox-exporter:latest
        securityContext:
          privileged: true
        ports:
        - containerPort: 9115
        volumeMounts:
        - name: config-volume
          mountPath: /etc/blackbox_exporter/config.yml
          subPath: config.yml
      volumes:
      - name: config-volume
        configMap:
          name: blackbox-config
      serviceAccount: blackbox-exporter-sa
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
  labels:
    app.kubernetes.io/component: prometheus
    app.kubernetes.io/part-of: system-dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: prometheus
  template:
    metadata:
      labels:
        app.kubernetes.io/name: prometheus
        app.kubernetes.io/component: prometheus
        app.kubernetes.io/part-of: system-dashboard
    spec:
      containers:
      - name: prometheus
        image: quay.io/prometheus/prometheus
        resources:
          limits:
            memory: 512Mi
            cpu: 1000m
        ports:
          - containerPort: 9090
        volumeMounts:
          - name: prometheus-config
            mountPath: /etc/prometheus/prometheus.yml
            subPath: prometheus.yml
            readOnly: true
          - name: prometheus-data
            mountPath: /prometheus
      volumes:
      - name: prometheus-config
        configMap:
          name: prometheus-config
      - name: prometheus-data
        persistentVolumeClaim:
          claimName: prometheus-data-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  labels:
    app.kubernetes.io/component: grafana
    app.kubernetes.io/part-of: system-dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: grafana
  template:
    metadata:
      labels:
        app.kubernetes.io/name: grafana
        app.kubernetes.io/component: grafana
        app.kubernetes.io/part-of: system-dashboard
    spec:
      containers:
      - name: grafana
        image: grafana/grafana-enterprise:latest
        resources:
          limits:
            memory: 256Mi
            cpu: 500m
        ports:
          - containerPort: 3000
        volumeMounts:
          - name: datasource-config
            mountPath: /etc/grafana/provisioning/datasources
            readOnly: true
          #- name: dashboards-config
          #  mountPath: /etc/grafana/provisioning/dashboards
          #  readOnly: true
          #- name: dashboards
          #  mountPath: /var/lib/grafana/dashboards
      volumes:
      - name: datasource-config
        configMap:
          name: datasource-config
      #- name: dashboards-config
      #  configMap:
      #    name: dashboards-config
      #- name: dashboards
      #  configMap:
      #    name: dashboards
